--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
-{% load static %}
+{% block title %} Blog | VirTips{% endblock title %}
 
+{% load static %}
 {% block content %}
 
     <!--category-->
@@ -45,7 +46,9 @@
                                     </a>
                                 </div>
                                 <div class="post-card-content">
-                                    <a href="blog-list.html" class="categorie">Travel</a>
+                                    {% for tag in post.tags.all %}
+                                    <a href="{% url 'blog:post_list_by_tag' tag.slug %}" class="categorie">{{tag}}</a>
+                                    {% endfor %}
                                     <h5>
                                         <a href="{{post.get_absolute_url}}">{{post.title}}</a>
                                     </h5>
@@ -249,39 +252,14 @@
                         <div class="section-title">
                             <h5>Tags</h5>
                         </div>
+
                         <div class="widget-tags">
                             <ul class="list-inline">
+                                {% for tag in tags %}
                                 <li>
-                                    <a href="blog-grid.html">Travel</a>
+                                    <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{tag}}</a>
                                 </li>
-                                <li>
-                                    <a href="blog-grid.html">Nature</a>
-                                </li>
-                                <li>
-                                    <a href="blog-grid.html">tips</a>
-                                </li>
-                                <li>
-                                    <a href="blog-grid.html">forest</a>
-                                </li>
-                                <li>
-                                    <a href="blog-grid.html">beach</a>
-                                </li>
-                                <li>
-                                    <a href="blog-grid.html">fashion</a>
-                                </li>
-                                <li>
-                                    <a href="blog-grid.html">livestyle</a>
-                                </li>
-                                <li>
-                                    <a href="blog-grid.html">healty</a>
-                                </li>
-                                <li>
-                                    <a href="blog-grid.html">food</a>
-                                </li>
-                                <li>
-                                    <a href="blog-grid.html">breakfast</a>
-                                </li>
-                    
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
@@ -293,43 +271,6 @@
     </section><!--/-->
 
     <!--newslettre-->
-    <section class="newslettre">
-        <div class="container-fluid">
-            <div class="newslettre-width text-center">
-                <div class="newslettre-info">
-                    <h5>Subscribe to our Newslatter</h5>
-                    <p> Sign up for free and be the first to get notified about new posts. </p>
-                </div>
-                <form action="#" class="newslettre-form">
-                    <div class="form-flex">
-                        <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Your email adress" required="required">
-                        </div>
-                        <button class="submit-btn" type="submit">Subscribe</button>
-                    </div>
-                </form>
-                <div class="social-icones">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#">
-                                <i class="fab fa-facebook-f"></i>Facebook</a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fab fa-twitter"></i>Twitter </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fab fa-instagram"></i>Instagram </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fab fa-youtube"></i>Youtube</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
+    {% include 'newsletter.html' %}
     
 {% endblock content %}
