--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
     
             <!--navbar-collapse-->
             <div class="collapse navbar-collapse" id="main_nav">
-                <ul class="navbar-nav ml-auto mr-auto">
+                <ul class="navbar-nav ml-auto mr-auto" id="navMenu">
                     <li class="nav-item">
                         <a class="nav-link active" href="/"> Home </a>
                     </li>
@@ -69,9 +69,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'contact' %}"> Contact </a>
                     </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}"> Logout </a>
+                    </li>
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}"> Login </a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
             <!--/-->
