--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Register | VirTips {% endblock title %}
 {% block content %}
 
     <!--register-->
@@ -9,31 +10,32 @@
                     <h5>Sign up</h5>
                 </div>
                 
-                <form  class="sign-form widget-form contact_form " method="post">
+                <form  class="sign-form widget-form contact_form " action="{% url 'register' %}" method="POST">
+                    {% csrf_token %}
                     <div class="form-group">
-                    
-                    <input type="text" class="form-control" placeholder="Username*" name="username" value="">
+                        {{ form.username }}
                     </div>
                     <div class="form-group">
-                    
-                    <input type="email" class="form-control" placeholder="Email Address*" name="email" value="">
+                        {{ form.email }}
                     </div>
                     <div class="form-group">
-                    
-                    <input type="password" class="form-control" placeholder="Password*" name="password" value="">
+                        {{ form.password }}
                     </div>
                     <div class="form-group">
-                    
-                    <input type="password" class="form-control" placeholder="Confirm Password*" name="confirm_password" value="">
+                        {{ form.confirm_password }}
                     </div>
                     <div class="sign-controls form-group">
-                    <div class="custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="rememberMe" required>
-                        <label class="custom-control-label" for="rememberMe">Agree to our <a href="#" class="btn-link">terms & conditions</a> </label>
-                    </div>
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="rememberMe" required>
+                            <label class="custom-control-label" for="rememberMe">Agree to our <a href="#" class="btn-link">terms & conditions</a> </label>
+                        </div>
                     </div>
                     <div class="form-group">
-                    <button type="submit" class="btn-custom">Sign Up</button>
+                        <button type="submit" value="submit" class="btn-custom">Sign Up</button>
+                    </div>
+                    <div class="py-3">
+                        {{ form.email.errors }}
+                        {{ form.non_field_errors }}
                     </div>
                     <p class="form-group text-center">Already have an account? <a href="{% url 'login' %}" class="btn-link">Login</a> </p>
                 </form>
@@ -42,7 +44,5 @@
            
         </div>
     </section>        
-
-    {% include 'newsletter.html' %}
 
 {% endblock content %}
